--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "particles-bg-vue": "^1.3.5",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
